examples/failing/Object.purs
module Object where

test o = o.foo

test1 = test {}
